--- a/BFS-c-sharp/BFS-c-sharp.csproj
+++ b/BFS-c-sharp/BFS-c-sharp.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BFS.cs" />
+    <Compile Include="BreadthFirstSearch.cs" />
     <Compile Include="Model\UserNode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
